# negative-emotions-diary

./: .editorconfig  .gitignore  .prettierrc.yaml  .python-version
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  initializer.py  main.py
backend/app/core/: auth.py  config.py
backend/app/models/: __init__.py  diary.py  user.py
backend/app/routers/: __init__.py  affect.py  auth.py  diary.py  statistics.py  user.py
backend/app/schemas/: auth.py  diary.py  user.py
backend/app/static/: main.js
backend/app/templates/: base.html  index.html  signin.html  signup.html
backend/data/: schema.json
backend/services/: comprehend.py
frontend/: GUIDE.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/src/@types/: vuex-shim.d.ts
frontend/src/pages/: Affect.vue  DiaryRead.vue  DiaryWrite.vue  Graph.vue  NotFound.vue  SignIn.vue  SignUp.vue  Wdiary.vue  emotions_graph.vue  main.vue
frontend/src/plugins/: axios.ts
frontend/src/store/: auth.ts  index.ts
